# SPX-Data-Collector

./: .env.example  .gitignore  Agents.md  README.md  pyproject.toml
.github/workflows/: secret-scan.yml
deploy/caddy/: marketplayground.io.Caddyfile  public-site.example.Caddyfile
deploy/systemd/: spx-backtest-prod.service  spx-sqlite-backup.service  spx-sqlite-backup.timer
docs/: TIMEZONE_NOTES.md  add_leg_performance_findings.md  architecture.md  design_scalability_plan.txt  lightsail_prod_setup.md  public_repo_checklist.md
scripts/: backup_sqlite.sh  validate_strategy_chart_alignment.py
src/spx_collector/: __init__.py  backtest_dev.py  backtest_prod.py  backtest_staging.py  collector.py  config.py  db.py  main.py  models.py  scheduler.py  tracking.py
src/spx_options_collector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_collector.py  test_scheduler.py  test_staging_shares_http.py  test_tracking.py  test_tracking_http.py
