[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spx-options-collector"
version = "0.1.0"
description = "Collect SPX options quotes and greeks from tastytrade and store snapshots in SQL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4,<4",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
  "SQLAlchemy>=2.0.36",
  "tastytrade>=12.0.0",
]

[project.scripts]
spx-collector = "spx_collector.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
